hack for gh pages page refresh

--- a/src/app/features/cart/cart.component.html
+++ b/src/app/features/cart/cart.component.html
@@ -21,7 +21,7 @@
       <button mat-stroked-button class="checkout-button">Checkout</button>
       <button mat-flat-button (click)="clearCart()">Clear Cart</button>
     } @if (isPreview) {
-    <a mat-stroked-button href="/cart">Checkout</a>
+    <a mat-stroked-button routerLink="/cart">Checkout</a>
     }
   </div>
   }
